clean4u/src/main/java/org/example/clean4u/_core/errors/Temp.java
package org.example.clean4u._core.errors;

public class Temp {
}
